<resources>
    <string name="app_name">Notes</string>

    <string name="title_activity_notes_list">NotesList</string>
    <string name="title_activity_note">Note</string>
    <string name="done">DONE</string>
    <string name="app_title">NOTES</string>
    <string name="discard">DISCARD</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="no_notes">NO NOTES</string>
    <string name="choose_frequency">CHOOSE FREQUENCY...</string>
    <string name="set_reminder">SET REMINDER</string>
    <string name="repeat">REPEAT</string>
    <string name="repeat_count_default">10</string>
    <string name="times">TIMES</string>
    <string name="ok">OK</string>
    <string name="title_default">TITLE</string>
    <string name="message_default">MESSAGE</string>
    <string name="item_default">Item</string>

</resources>
