<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/set_reminder_text"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/set_reminder"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/frequency_text"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_reminder_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/choose_frequency" />

        <SeekBar
            android:id="@+id/frequency_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/frequency_text"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:max="8"
            android:progress="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frequency_seek_bar"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/repeat_text"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat" />

            <EditText
                android:id="@+id/repeat_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/repeat_count_default" />

            <TextView
                android:id="@+id/times_text"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/ok_button"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:text="@string/ok"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cancel_button"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:text="@string/cancel"
                android:textStyle="bold" />


        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>