<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/confirmation_dialog_title"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/title_default"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/confirmation_dialog_message"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmation_dialog_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/message_default" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/confirmation_ok_button"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:text="@string/ok"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirmation_cancel_button"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:text="@string/cancel"
                android:textStyle="bold" />


        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>